--- a/DISCO.HTML
+++ b/DISCO.HTML
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>DISCOGRAFANDO</title>
+    <title>Portal Linkin Park</title>
     <link rel="stylesheet" href="ART.CSS">
 
 </head>
