--- a/LinkinPark.html
+++ b/LinkinPark.html
@@ -96,7 +96,7 @@
             <img class="ico" src="Imagens\youtube.png">
         </a> 
         
-        <a href="fz.html" target="_self"></a>
+        <a href="fz.html" target="_self">
         <br><br><img class="icon" src="Imagens/FZ.jpg"><br>
         From Zero<br> 
         <a href="https://www.deezer.com/en/album/664052151" target="_self">
